# cec-mqtt-bridge

./: .gitignore  README.md  config.ini.default  pyproject.toml
contrib/: debian-ubuntu-install.sh
debian/: cec-mqtt-bridge.service
src/: run.py  test.sh
src/cec_mqtt_bridge/: __init__.py  bridge.py  hdmicec.py  lirc.py  lirc_if.py
