[project]
name = "cec_mqtt_bridge"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A HDMI-CEC and IR to MQTT bridge written in Python 3 for connecting your AV-devices to your Home Automation system."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/ballle98/cec-mqtt-bridge"
Issues = "https://github.com/ballle98/cec-mqtt-bridge/issues"

[project.scripts]
cec-mqtt-bridge = "cec_mqtt_bridge.bridge:main"
#cec-mqtt-create = "cec-mqtt-bridge.create_lircrc"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"